# terminal-hub

./: .gitignore  .mcp.json  README.md
.claude/: README.md  agent-template.md  coding-standards.md  design.md  instructions.md  project-context.md  task-board.md
.claude/agents/: architect.md  business-analyst.md  devops.md  junior-dev.md  product-engineer.md  project-manager.md  reviewer.md  senior-dev.md  tester.md  ux-designer.md
.claude/skills/ui-ux-pro-max/: SKILL.md  SOURCE.md
.github/workflows/: release.yml
assets/imgs/: architecture.mmd
docs/superpowers/plans/: 2026-07-19-plan-1-foundations.md  2026-07-19-plan-2-core.md  2026-07-19-plan-3-install.md  2026-07-19-plan-4-gui.md  INTERFACE-CONTRACT.md
docs/superpowers/specs/: 2026-07-19-terminal-hub-design.md  2026-07-23-auto-update-design.md  2026-07-23-collapsible-sidebar-design.md  2026-07-23-shell-integration-design.md
hub/: .dockerignore  Cargo.toml  run-hub-demo.sh
hub/app/: MANUAL-VERIFICATION.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json
hub/app/src/: App.svelte  vite-env.d.ts
hub/app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
hub/app/src-tauri/binaries/: .gitignore
hub/app/src-tauri/capabilities/: default.json
hub/app/src-tauri/src/: commands.rs  config.rs  daemon.rs  lib.rs  lifecycle.rs  main.rs  reconcile.rs
hub/app/src-tauri/tests/: lifecycle_install.rs  real_daemon.rs
hub/app/src/lib/: ConfirmDialog.svelte  Grid.svelte  SessionList.svelte  Settings.svelte  Spinner.svelte  Terminal.svelte  TileFrame.svelte  Toolbar.svelte  api.ts  dialog.ts  mock.ts  path.ts  store.ts
hub/app/tests/: README.md  closedtile.spec.ts  echo.spec.ts  grid.spec.ts  lifecycle.spec.ts  newsession.spec.ts  sessions.spec.ts  settings.spec.ts  startup.spec.ts
hub/crates/hub-cli/: Cargo.toml
hub/crates/hub-cli/src/: attach.rs  autostart.rs  cli.rs  daemon_client.rs  install.rs  kill.rs  lib.rs  main.rs  manifest.rs  paths.rs  rcfile.rs  reconcile.rs  snippet.rs  status.rs  uninstall.rs  update.rs
hub/crates/hub-cli/tests/: app_bundle_install.rs  attach_failsafe.rs  autostart_content.rs  daemon_client_fake.rs  install_bin_src.rs  install_idempotent.rs  kill_fake.rs  kill_session_real.rs  rc_gate.rs  rcfile_split.rs  reconcile.rs  shell_integration_hook.rs  uninstall_restore.rs  update_preserves_sessions.rs
hub/crates/hub-cli/tests/common/: mod.rs
hub/crates/hub-daemon/: Cargo.toml
hub/crates/hub-daemon/src/: lib.rs  main.rs  reconcile.rs  registry.rs  server.rs  singleton.rs
hub/crates/hub-daemon/tests/: attach_stream.rs  auth.rs  deliver_replay_evict.rs  detach_streaming.rs  focus_size.rs  open_list.rs  reconcile.rs  register_records.rs  session_survives.rs  shell_integration_activity.rs  shutdown.rs  singleton.rs  teardown_origin.rs  update_activity.rs
hub/crates/hub-e2e/: Cargo.toml
hub/crates/hub-e2e/src/: lib.rs
hub/crates/hub-e2e/tests/: slow_alive_viewer.rs  slow_viewer.rs  spof.rs  teardown.rs  two_viewers.rs
hub/crates/hub-e2e/tests/common/: mod.rs
hub/crates/hub-proto/: Cargo.toml
hub/crates/hub-proto/src/: framing.rs  lib.rs  types.rs
hub/crates/hub-pty/: Cargo.toml
hub/crates/hub-pty/src/: lib.rs
hub/crates/hub-relay/: Cargo.toml
hub/crates/hub-relay/src/: conn.rs  detach.rs  lib.rs  main.rs  paths.rs  record.rs  relay.rs  resize.rs
hub/crates/hub-relay/tests/: backpressure.rs  cols_rows_flags.rs  detach_reparent.rs  focus_report_wiring.rs  hub_active_guard.rs  missing_flag_value.rs  pty_screen.rs  record_roundtrip.rs  resize_debounce.rs  resize_zero_clamp.rs  shell_integration_wiring.rs  sigwinch_wiring.rs  term_env.rs
hub/crates/hub-term/: Cargo.toml
hub/crates/hub-term/src/: lib.rs  shell_integration.rs
hub/crates/hub-transport/: Cargo.toml
hub/crates/hub-transport/src/: auth.rs  lib.rs
hub/crates/hub-tui/: Cargo.toml
hub/crates/hub-tui/src/: lib.rs  main.rs
hub/crates/hub-tui/tests/: viewer_client.rs
hub/docker/ubuntu-gui/: Dockerfile  start.sh
hub/install/: bash-profile-bridge.sh  bash-snippet.sh  zsh-snippet.sh
hub/npm/: .gitignore  README.md
hub/npm/term-hub/: package.json
hub/npm/term-hub/assets/: icon.icns
hub/npm/term-hub/lib/: resolve.js
hub/npm/term-hub/scripts/: postinstall.js  preuninstall.js
