[workspace]
resolver = "2"
members = [
    "crates/hub-proto",
    "crates/hub-term",
    "crates/hub-pty",
    "crates/hub-transport",
    "crates/hub-relay",
    "crates/hub-daemon",
    "crates/hub-tui",
    "crates/hub-e2e",
    "crates/hub-cli",
    "app/src-tauri",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["process", "signal", "fs"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
dirs = "5"
tempfile = "3"
