[package]
name = "hub-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "hub_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hub-proto = { path = "../../crates/hub-proto" }
hub-transport = { path = "../../crates/hub-transport" }

[dev-dependencies]
tempfile = "3"
# Real-daemon integration test (tests/real_daemon.rs): drives the actual
# hub-daemon + hub-relay binaries. hub-relay provides HubPaths / SessionRecord /
# conn helpers; libc is used to probe relay liveness (kill(pid, 0)).
hub-relay = { path = "../../crates/hub-relay" }
libc = { workspace = true }
