[package]
name = "hub-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "hub_cli"
path = "src/lib.rs"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
hub-proto = { path = "../hub-proto" }
hub-transport = { path = "../hub-transport" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
portable-pty = { workspace = true }
tempfile = { workspace = true }
hub-relay = { path = "../hub-relay" }
